src/styles/components/resource.scss
.resource {

  &__header, &__content {
    // padding: 15px;
  }



    // &__arrow {
    //   position: absolute;
    //   top: 50%;
    //   transform: translateY(-50%);
    //   &.prev {
    //     left: 7px;
    //     .icon {
    //       transform: rotate(180deg);
    //     }
    //   }
    //   &.next {
    //     right: 7px;
    //   }
    //   .icon {
    //     height: 20px;
    //     fill: colors(grey);
    //     cursor: pointer;
    //
    //     &:hover {
    //       fill: colors(blue);
    //     }
    //
    //   }
    // }
  // }

  &__content {
    background-color: colors(offwhite);
    z-index: 1;
    padding: $standard-padding $standard-padding 50px;

    .ReactPDF {
      &__Document {

      }

      &__Page {
        padding: 20px 0px;
        // border-bottom: 1px solid colors(blue-50);

        // & > * {
        //   max-width: 100% !important;
        //   overflow-x: hidden;
        // }

        &:first-child {
          padding-top: 0px;
        }

        &__canvas {
          margin: auto;
          box-shadow: standard-shadow(grey);
        }
      }

      &__Loader {
        position: relative;
      }
    }

    &__video {
      position: relative;
      height: 0;
      overflow: hidden;
      padding-bottom: 50%;

    }

    &__video iframe {
      // position: absolute;
      // top:0;
      // left: 0;
      // width: 100%;
      // height: 100%;
    }

    &__richtext {
      padding: $standard-padding;
      background-color: colors(white);
    }

    &__image {
      width: 100%;
      overflow-x: hidden;
      &__image-container {
        display: block;
        width: 100%;
        height: auto;
      }
    }

    &__website {
      width: 100%;
      padding: 25px;
      overflow-x: hidden;

      &__text-link__text {
        text-decoration: underline;
        padding-bottom: $standard-padding;
        display: inline-block;
      }

      &__screenshot {
        display: block;
        width: 100%;
        height: auto;
        overflow: hidden;

        &:hover {
          opacity: .8;
        }
      }
    }
  }



  &__footer {
    & > * {
      font-size: 16px;
      color: colors(black);
    }
  }

}

